Update README and add tox support for testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "smallgraphlib"
-version = "0.1.0"
-description = ""
+version = "0.2.1"
+description = "Simple library for handling small graphs, including Tikz code generation."
 authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
+repository = "https://github.com/wxgeo/smallgraphlib"
+license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -10,7 +12,27 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 pytest = "^7"
 mypy = "^0.950"
+flake8 = "^4.0.1"
+black = "^22.1.0"
+tox = "^3.24.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+skipsdist = true
+envlist = py38
+
+[testenv]
+whitelist_externals = poetry
+commands =
+    poetry install -v
+    poetry run pytest tests
+    poetry run mypy .
+    poetry run flake8 --max-line-length 110 --ignore=E203,W503
+"""
