--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [tool.poetry]
 name = "smallgraphlib"
-version = "0.3.0"
+version = "0.3.1"
 description = "Simple library for handling small graphs, including Tikz code generation."
 authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
 repository = "https://github.com/wxgeo/smallgraphlib"
 license = "GPL-3.0-or-later"
+readme = "README.md"
+keywords = ["graph", "tikz", "latex"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
