--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,10 @@ flake8 = "^4.0.1"
 black = "^22.1.0"
 tox = "^3.24.5"
 sphinx-autodoc-typehints = "^1.18.3"
-sphinx-rtd-theme = "^1.0.0"
+sphinx-rtd-theme = "^1.0.0"#
 myst-parser = "^0.18.0"
+# To test compatibility with sympy.
+sympy = "^1.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
