--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ sympy = "^1.10.1"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-
+[tool.black]
+line-length = 110
 
 [tool.tox]
 legacy_tox_ini = """
