--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ readme = "README.md"
 keywords = ["graph", "tikz", "latex"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7"
-mypy = "^0.960"
-flake8 = "^4.0.1"
+mypy = "^1.0"
+flake8 = "^6"
 black = "^22.1.0"
-tox = "^3.24.5"
+tox = "^4.1.2"
 sphinx-autodoc-typehints = "^1.18.3"
 sphinx-rtd-theme = "^1.0.0"#
 myst-parser = "^0.18.0"
@@ -27,6 +27,9 @@ sympy = "^1.10.1"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.mypy]
+implicit_optional = true
+
 [tool.black]
 line-length = 110
 
@@ -34,10 +37,10 @@ line-length = 110
 legacy_tox_ini = """
 [tox]
 skipsdist = true
-envlist = py38
+envlist = py310
 
 [testenv]
-whitelist_externals = poetry
+allowlist_externals = poetry
 commands =
     poetry install -v
     poetry run black smallgraphlib tests
