--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ version_variable = "pyproject.toml:version"
 [tool.mypy]
 implicit_optional = true
 warn_unused_ignores = true
+strict_equality = true
 
 [tool.black]
 line-length = 110
