--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,6 @@ dev = [
     "pytest>=7,<8",
     "mypy>=1.8,<2",
     "black>=22.1.0,<23",
-    "tox>=4.1.2,<5",
     "sphinx-autodoc-typehints>=1.18.3,<2",
     "sphinx-rtd-theme>=1.0.0,<2",
     "myst-parser>=0.18.0,<0.19",
@@ -42,6 +41,10 @@ dev = [
 [build-system]
 requires = ["uv_build>=0.9.6,<0.10.0"]
 build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-root = ""
+module-name= "smallgraphlib"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
